# bobo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bobo.sln  build.bat  build.sh  clean.bat  clean.sh  gen.bat  imgui.ini  premake5.lua  relbuild.sh  run.bat  run.sh
.githooks/: pre-commit
assets/Models/: Book_Shelf.mtl  Chair_1.mtl  Chair_2.mtl  Lamp.mtl  PoolTableFinal.mtl  Pool_Cue.mtl  Pool_Table.mtl  cube2.mtl  floatingisland.mtl  floor.mtl  moon.mtl  stool.mtl  wallpiece.mtl  wallwithdoor.mtl
assets/Models/Room_Walls/: Ceiling.mtl  Floor.mtl  Wall_001.mtl  Wall_002.mtl  Wall_003.mtl  Wall_004.mtl
assets/SkyBox_Textures/PNGS/: popcornceiling_shutterstock_615917825.xcf
bobo/: imgui.ini
bobo/libs/FMODAPI/doc/: revision.txt
bobo/src/: bpch.h
bobo/src/engine/: Bobo.h  Input.h  Log.h  Macro.h  Time.h  Window.h
bobo/src/engine/Audio/: Audio.cpp  SoundInfo.h
bobo/src/engine/Coroutine/: Coroutine.h  CoroutineScheduler.h
bobo/src/engine/EntityComponent/: Component.h  GameObject.h  Scene.h  SceneManager.h
bobo/src/engine/GameState/: GameState.h
bobo/src/engine/Model/: Model.h  ModelLoader.cpp  ModelLoader.h
bobo/src/engine/Renderer/: Renderer.h  ShaderLoader.h  Text.txt  TextureLoader.h
bobo/src/game/: Game.h
bobo/src/game/GameComponents/: FunnyMove.h
bobo/src/game/GameState/: GameOverState.cpp  GameOverState.h  GameState.h  GameStateManager.cpp  GameStateManager.h  IGameState.h  InGameState.cpp  InGameState.h  MainMenuState.cpp  MainMenuState.h  PauseMenuState.h  PauseState.cpp  PauseState.h
bobo_engine/: PhysicsTest.cpp  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.h  SphereCollider.h  Vector3.cpp  Vector3.h  bobo_engine.vcxproj  bobo_engine.vcxproj.filters
bobo_engine/src/: Bobo.h  bobopch.cpp  bobopch.h
bobo_engine/src/Bobo/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Macro.h  Time.cpp  Time.h
bobo_game/: bobo_game.vcxproj  bobo_game.vcxproj.filters
bobo_game/src/: Game.cpp
models/Reference_Image/: il_fullxfull.3732251368_9eka.avif
models/blender_files/: Ball_001.blend  Ball_001.blend1
models/blender_files/Ball_Files/: Ball_001.blend  Ball_001.blend1  Ball_002.blend  Ball_002.blend1  Ball_003.blend  Ball_003.blend1  Ball_004.blend  Ball_004.blend1  Ball_005.blend  Ball_005.blend1  Ball_006.blend  Ball_006.blend1  Ball_007.blend  Ball_007.blend1  Ball_008.blend  Ball_008.blend1  Ball_009.blend  Ball_009.blend1  Ball_010.blend  Ball_010.blend1  Ball_011.blend  Ball_011.blend1  Ball_012.blend  Ball_012.blend1  Ball_013.blend  Ball_013.blend1  Ball_014.blend  Ball_014.blend1  Ball_015.blend  Ball_015.blend1  Ball_White.blend  Ball_White.blend1
models/blender_files/Cue_File/: Pool_Cue.blend  Pool_Cue.blend1
models/blender_files/Cue_Holder_File/: cue_holder.blend  cue_holder.blend1
models/blender_files/Table_File/: Pool_Table.blend  Pool_Table.blend1
models/fbx_files/Cue_Holder/: cue_holder.fbx
models/fbx_files/Pool_Balls/: Ball_001.fbx  Ball_002.fbx  Ball_003.fbx  Ball_004.fbx  Ball_005.fbx  Ball_006.fbx  Ball_007.fbx  Ball_008.fbx  Ball_009.fbx  Ball_010.fbx  Ball_011.fbx  Ball_012.fbx  Ball_013.fbx  Ball_014.fbx  Ball_015.fbx  Ball_White.fbx
models/fbx_files/Pool_Cue/: Pool_Cue.fbx
models/fbx_files/Pool_Table/: Pool_Table.fbx
models/reference_images/pool_cue_references/: 58-maple-cue-2-piece-51693fb3-7fa6-4135-9e69-7b618118f91a.avif
models/reference_images/pool_table_reference/: empty-pool-table-realistic-detailed-illustration_88188-817.avif
rendering_documentation/: rendering_notes.txt
src/: bpch.h  main.cpp
src/engine/: Bobo.h  Input.h  Log.h  Macro.h  Time.h  Window.h
src/engine/Audio/: Audio.cpp  Audio.h  SoundInfo.h
src/engine/Coroutine/: Coroutine.h  CoroutineScheduler.h
src/engine/EntityComponent/: Component.h  EntityManager.h  GameObject.h  Scene.h  SceneManager.h  SkyBox.h
src/engine/GameState/: GameState.h  GameStateManager.h
src/engine/Model/: Model.h  ModelLoader.cpp  ModelLoader.h
src/engine/Notifications/: NotificationManager.h
src/engine/Physics/: Physics.h  Rigidbody.h  Text.txt
src/engine/Popups/: PopupManager.h
src/engine/Renderer/: Camera.h  Light.h  Renderer.h  Shader.h  ShaderLoader.h  TextureLoader.h
src/engine/SkyBox/: Skybox.cpp  Skybox.h
src/engine/UI/: ImGuiHelpers.h
src/game/: Game.h
src/game/GameComponents/: CueBallGhost.h  FunnyMove.h  GameManager.h  ObjectTag.h  ObjectTagAlt.h  PoolBallRigidbodyControl.h  RoofMove.h
src/game/GameState/: GameOverState.h  InGameState.h  MainMenuState.h  PauseMenuState.h
(+163 files in other folders)
